--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -13,9 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
+    - name: Install AdoptOpenJDK 11
+        uses: AdoptOpenJDK/install-jdk@v1
+        with:
+          version: "11"
     - name: Run tests
       run: sbt test
