--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -10,12 +10,15 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        # test against latest update of each major Java version, as well as specific updates of LTS versions:
+        java: [ "8", "11" ]
     steps:
     - uses: actions/checkout@v2
-    - name: Install AdoptOpenJDK 11
+    - name: Install AdoptOpenJDK ${{matrix.java}}
         uses: AdoptOpenJDK/install-jdk@v1
         with:
-          version: "11"
+          version: ${{matrix.java}}
     - name: Run tests
       run: sbt test
